// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Register > Basic Rendering > matches register form snapshot 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center bg-[#0856d1]"
  >
    <div
      class="w-full max-w-md bg-white rounded-2xl shadow-xl px-8 py-10 flex flex-col items-center"
    >
      <img
        alt="Logo"
        class="w-20 h-20 mb-6"
        src="mocked-logo.svg"
      />
      <h1
        class="text-2xl font-bold mb-6 text-center"
      >
        Create Your Account
      </h1>
      <form
        class="w-full flex flex-col gap-4"
      >
        <div>
          <label
            class="block text-sm font-medium mb-1"
            for="username"
          >
            Name
          </label>
          <input
            class="w-full px-4 py-3 border border-gray-200 rounded-lg text-base bg-gray-50 focus:outline-none focus:border-blue-600"
            id="username"
            name="username"
            type="text"
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium mb-1"
            for="email"
          >
            Email
          </label>
          <input
            class="w-full px-4 py-3 border border-gray-200 rounded-lg text-base bg-gray-50 focus:outline-none focus:border-blue-600"
            id="email"
            name="email"
            type="email"
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium mb-1"
            for="password"
          >
            Password
          </label>
          <input
            class="w-full px-4 py-3 border border-gray-200 rounded-lg text-base bg-gray-50 focus:outline-none focus:border-blue-600"
            id="password"
            name="password"
            type="password"
          />
        </div>
        <button
          class="w-full py-3 bg-[#0856d1] text-white rounded-lg font-semibold hover:bg-blue-700 transition mb-2"
          type="submit"
        >
          Sign up with Email
        </button>
        <button
          class="w-full py-3 bg-blue-600 text-white rounded-lg font-semibold flex items-center justify-center hover:bg-blue-700 transition"
          type="button"
        >
          <svg
            class="w-5 h-5 mr-2"
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M22.675 0h-21.35C.595 0 0 .592 0 1.326v21.348C0 23.408.595 24 1.325 24h11.495v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.797.143v3.24l-1.918.001c-1.504 0-1.797.715-1.797 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116C23.406 24 24 23.408 24 22.674V1.326C24 .592 23.406 0 22.675 0"
            />
          </svg>
          Sign up with Facebook
        </button>
      </form>
      <div
        class="w-full flex flex-col items-center mt-4 gap-1"
      >
        <span
          class="text-sm text-gray-700"
        >
          Already have an account? 
          <a
            class="text-[#0856d1] hover:underline font-medium"
            data-discover="true"
            href="/login"
          >
            Log in
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Register > matches register form snapshot 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center bg-[#0856d1]"
  >
    <div
      class="w-full max-w-md bg-white rounded-2xl shadow-xl px-8 py-10 flex flex-col items-center"
    >
      <img
        alt="Logo"
        class="w-20 h-20 mb-6"
        src="/src/assets/react.svg"
      />
      <h1
        class="text-2xl font-bold mb-6 text-center"
      >
        Create Your Account
      </h1>
      <form
        class="w-full flex flex-col gap-4"
      >
        <div>
          <label
            class="block text-sm font-medium mb-1"
            for="username"
          >
            Name
          </label>
          <input
            class="w-full px-4 py-3 border border-gray-200 rounded-lg text-base bg-gray-50 focus:outline-none focus:border-blue-600"
            id="username"
            name="username"
            type="text"
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium mb-1"
            for="email"
          >
            Email
          </label>
          <input
            class="w-full px-4 py-3 border border-gray-200 rounded-lg text-base bg-gray-50 focus:outline-none focus:border-blue-600"
            id="email"
            name="email"
            type="email"
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium mb-1"
            for="password"
          >
            Password
          </label>
          <input
            class="w-full px-4 py-3 border border-gray-200 rounded-lg text-base bg-gray-50 focus:outline-none focus:border-blue-600"
            id="password"
            name="password"
            type="password"
          />
        </div>
        <button
          class="w-full py-3 bg-[#0856d1] text-white rounded-lg font-semibold hover:bg-blue-700 transition mb-2"
          type="submit"
        >
          Sign up with Email
        </button>
        <button
          class="w-full py-3 bg-blue-600 text-white rounded-lg font-semibold flex items-center justify-center hover:bg-blue-700 transition"
          type="button"
        >
          <svg
            class="w-5 h-5 mr-2"
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M22.675 0h-21.35C.595 0 0 .592 0 1.326v21.348C0 23.408.595 24 1.325 24h11.495v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.797.143v3.24l-1.918.001c-1.504 0-1.797.715-1.797 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116C23.406 24 24 23.408 24 22.674V1.326C24 .592 23.406 0 22.675 0"
            />
          </svg>
          Sign up with Facebook
        </button>
      </form>
      <div
        class="w-full flex flex-col items-center mt-4 gap-1"
      >
        <span
          class="text-sm text-gray-700"
        >
          Already have an account? 
          <a
            class="text-[#0856d1] hover:underline font-medium"
            data-discover="true"
            href="/login"
          >
            Log in
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Register > renders register form fields and button 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center bg-[#0856d1]"
  >
    <div
      class="w-full max-w-md bg-white rounded-2xl shadow-xl px-8 py-10 flex flex-col items-center"
    >
      <img
        alt="Logo"
        class="w-20 h-20 mb-6"
        src="/src/assets/react.svg"
      />
      <h1
        class="text-2xl font-bold mb-6 text-center"
      >
        Create Your Account
      </h1>
      <form
        class="w-full flex flex-col gap-4"
      >
        <div>
          <label
            class="block text-sm font-medium mb-1"
            for="username"
          >
            Name
          </label>
          <input
            class="w-full px-4 py-3 border border-gray-200 rounded-lg text-base bg-gray-50 focus:outline-none focus:border-blue-600"
            id="username"
            name="username"
            type="text"
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium mb-1"
            for="email"
          >
            Email
          </label>
          <input
            class="w-full px-4 py-3 border border-gray-200 rounded-lg text-base bg-gray-50 focus:outline-none focus:border-blue-600"
            id="email"
            name="email"
            type="email"
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium mb-1"
            for="password"
          >
            Password
          </label>
          <input
            class="w-full px-4 py-3 border border-gray-200 rounded-lg text-base bg-gray-50 focus:outline-none focus:border-blue-600"
            id="password"
            name="password"
            type="password"
          />
        </div>
        <button
          class="w-full py-3 bg-[#0856d1] text-white rounded-lg font-semibold hover:bg-blue-700 transition mb-2"
          type="submit"
        >
          Sign up with Email
        </button>
        <button
          class="w-full py-3 bg-blue-600 text-white rounded-lg font-semibold flex items-center justify-center hover:bg-blue-700 transition"
          type="button"
        >
          <svg
            class="w-5 h-5 mr-2"
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M22.675 0h-21.35C.595 0 0 .592 0 1.326v21.348C0 23.408.595 24 1.325 24h11.495v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.797.143v3.24l-1.918.001c-1.504 0-1.797.715-1.797 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116C23.406 24 24 23.408 24 22.674V1.326C24 .592 23.406 0 22.675 0"
            />
          </svg>
          Sign up with Facebook
        </button>
      </form>
      <div
        class="w-full flex flex-col items-center mt-4 gap-1"
      >
        <span
          class="text-sm text-gray-700"
        >
          Already have an account? 
          <a
            class="text-[#0856d1] hover:underline font-medium"
            data-discover="true"
            href="/login"
          >
            Log in
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Register > shows validation error if fields are empty 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center bg-[#0856d1]"
  >
    <div
      class="w-full max-w-md bg-white rounded-2xl shadow-xl px-8 py-10 flex flex-col items-center"
    >
      <img
        alt="Logo"
        class="w-20 h-20 mb-6"
        src="/src/assets/react.svg"
      />
      <h1
        class="text-2xl font-bold mb-6 text-center"
      >
        Create Your Account
      </h1>
      <form
        class="w-full flex flex-col gap-4"
      >
        <div>
          <label
            class="block text-sm font-medium mb-1"
            for="username"
          >
            Name
          </label>
          <input
            class="w-full px-4 py-3 border border-gray-200 rounded-lg text-base bg-gray-50 focus:outline-none focus:border-blue-600"
            id="username"
            name="username"
            type="text"
          />
          <span
            class="text-red-500 text-xs"
          >
            Name is required
          </span>
        </div>
        <div>
          <label
            class="block text-sm font-medium mb-1"
            for="email"
          >
            Email
          </label>
          <input
            class="w-full px-4 py-3 border border-gray-200 rounded-lg text-base bg-gray-50 focus:outline-none focus:border-blue-600"
            id="email"
            name="email"
            type="email"
          />
          <span
            class="text-red-500 text-xs"
          >
            Email is required
          </span>
        </div>
        <div>
          <label
            class="block text-sm font-medium mb-1"
            for="password"
          >
            Password
          </label>
          <input
            class="w-full px-4 py-3 border border-gray-200 rounded-lg text-base bg-gray-50 focus:outline-none focus:border-blue-600"
            id="password"
            name="password"
            type="password"
          />
          <span
            class="text-red-500 text-xs"
          >
            Password is required
          </span>
        </div>
        <button
          class="w-full py-3 bg-[#0856d1] text-white rounded-lg font-semibold hover:bg-blue-700 transition mb-2"
          type="submit"
        >
          Sign up with Email
        </button>
        <button
          class="w-full py-3 bg-blue-600 text-white rounded-lg font-semibold flex items-center justify-center hover:bg-blue-700 transition"
          type="button"
        >
          <svg
            class="w-5 h-5 mr-2"
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M22.675 0h-21.35C.595 0 0 .592 0 1.326v21.348C0 23.408.595 24 1.325 24h11.495v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.797.143v3.24l-1.918.001c-1.504 0-1.797.715-1.797 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116C23.406 24 24 23.408 24 22.674V1.326C24 .592 23.406 0 22.675 0"
            />
          </svg>
          Sign up with Facebook
        </button>
      </form>
      <div
        class="w-full flex flex-col items-center mt-4 gap-1"
      >
        <span
          class="text-sm text-gray-700"
        >
          Already have an account? 
          <a
            class="text-[#0856d1] hover:underline font-medium"
            data-discover="true"
            href="/login"
          >
            Log in
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;
